[package]
name = "iota-client"
version = "0.5.0-alpha.3"
authors = ["Nathan Jaremko <nathan@jaremko.ca>", "Yu-Wei Wu <wusyong9104@gmail.com>"]
edition = "2018"
description = "Client to use Iota APIs"
repository = "https://github.com/iotaledger/iota.rs"
homepage = "https://github.com/iotaledger/iota.rs"
documentation = "https://docs.rs/iota-client"
license = "Apache-2.0"

[lib]
name = "iota_client"

[dependencies]
# bee-rest-api = { git = "https://github.com/iotaledger/bee.git", branch = "chrysalis-pt-2" }
# bee-message = { git = "https://github.com/iotaledger/bee.git", branch = "chrysalis-pt-2" }
# bee-pow = { git = "https://github.com/iotaledger/bee.git", branch = "chrysalis-pt-2" }
# bee-common-derive = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
# bee-crypto = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-rest-api = { git = "https://github.com/iotaledger/bee.git", rev = "923016e0c453f073ff557ea36b92c24e7cf213f5" }
bee-message = { git = "https://github.com/iotaledger/bee.git", rev = "923016e0c453f073ff557ea36b92c24e7cf213f5" }
bee-pow = { git = "https://github.com/iotaledger/bee.git", rev = "923016e0c453f073ff557ea36b92c24e7cf213f5" }
bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
bee-common-derive = { git = "https://github.com/iotaledger/bee.git", rev = "7f24cbf38d5091d373eba8477ef3ccab16d74906" }
bee-crypto = { git = "https://github.com/iotaledger/bee.git", rev = "7f24cbf38d5091d373eba8477ef3ccab16d74906" }
iota-crypto = { git = "https://github.com/iotaledger/crypto.rs.git", rev = "6e67b652dd55df05877f575b9a09ccb5a7006694", features = ["ed25519", "random"]}
slip10 = "0.4"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.58"
chrono = "0.4.12"
hex = "0.4.2"
blake2 = "0.9"
paho-mqtt = { version = "0.9", optional = true }
regex = { version = "1.4", optional = true }
tokio = { version = "1.1", features = ["macros", "sync", "rt-multi-thread"] }
thiserror = "1.0"
num_cpus = "1.13"

[features]
mqtt = ["paho-mqtt", "regex"]