[package]
name = "iota-core"
version = "0.2.0-alpha.3"
authors = ["YuWeiWu <wusyong9104@gmail.com>"]
edition = "2018"
description = "Core library of IOTA"
license = "Apache-2.0"
repository = "https://github.com/iotaledger/iota.rs"
homepage = "https://iota.org"

[lib]
name = "iota"

[dependencies]
bee-message = { git = "https://github.com/iotaledger/bee.git", rev = "923016e0c453f073ff557ea36b92c24e7cf213f5" }
bee-pow = { git = "https://github.com/iotaledger/bee.git", rev = "923016e0c453f073ff557ea36b92c24e7cf213f5" }
bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
# bee-common = { git = "https://github.com/iotaledger/bee.git", branch = "dev" }
# bee-message = { git = "https://github.com/iotaledger/bee.git", branch = "chrysalis-pt-2" }
# bee-pow = { git = "https://github.com/iotaledger/bee.git", branch = "chrysalis-pt-2" }
iota-client = { version = "0.5.0-alpha", path = "../iota-client", default-features = false }

[dev-dependencies]
tokio = { version = "1.1", features = ["macros"] }

[features]
mqtt = ["iota-client/mqtt"]
